Ztylish New 1 index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ztylish • Drop Harian Terbaru</title>
+    <title>Ztylish Fashion Shop</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
@@ -79,7 +79,7 @@
 
 <header>
     <h1 class="typing">Ztylish Drop Harian</h1>
-    <p style="font-size:1.3rem;margin-top:1rem;">Pasti Hemat • Pasti Kece • Pasti Tenang</p>
+    <p style="font-size:1.3rem;margin-top:1rem;">Gaya Hidup Fashion Terbaru jadi Pasti Hemat dan Pasti Tenang (karena Retur Mudah), khusus untuk style harianmu.</p>
 </header>
 
 <nav>
@@ -90,7 +90,7 @@
 </nav>
 
 <div class="container">
-    <h2 id="products" style="text-align:center;font-size:3rem;margin:3rem 0;">Hot Drop Hari Ini</h2>
+    <h2 id="products" style="text-align:center;font-size:3rem;margin:3rem 0;">Hot Item Hari Ini</h2>
     <div class="filter-buttons">
         <button class="filter-btn active" data-category="all">Semua</button>
         <button class="filter-btn" data-category="Men">Men</button>
